added more files

--- a/layouts/facultyBoilerplate.ejs
+++ b/layouts/facultyBoilerplate.ejs
@@ -32,7 +32,7 @@
                 <a href="/faculty/dashboard">Dashboard</a>
             </div>
             <div class="nav-element">
-                <a href="/faculty/create">Create a course</a>
+                <a href="/faculty/attendance">Attendance</a>
             </div>
             <div class="nav-element">
                 <a href="/faculty/download">Download</a>
